--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-01</td>
 <td style="text-align: left;">34,728</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">403,260</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-30</td>
 <td style="text-align: left;">33,690</td>
 <td style="text-align: left;">1,038</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-24</td>
-<td style="text-align: left;">30,174</td>
-<td style="text-align: left;">4,554</td>
-<td style="text-align: left;">1,031</td>
-<td style="text-align: left;">306</td>
-<td style="text-align: left;">317,540</td>
+<td style="text-align: left;">2020-04-25</td>
+<td style="text-align: left;">30,839</td>
+<td style="text-align: left;">3,889</td>
+<td style="text-align: left;">1,075</td>
+<td style="text-align: left;">262</td>
+<td style="text-align: left;">333,682</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-17</td>
-<td style="text-align: left;">24,122</td>
-<td style="text-align: left;">10,606</td>
-<td style="text-align: left;">699</td>
-<td style="text-align: left;">638</td>
-<td style="text-align: left;">235,218</td>
+<td style="text-align: left;">2020-04-18</td>
+<td style="text-align: left;">25,271</td>
+<td style="text-align: left;">9,457</td>
+<td style="text-align: left;">754</td>
+<td style="text-align: left;">583</td>
+<td style="text-align: left;">247,134</td>
 </tr>
 </tbody>
 </table>
