--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-05-02</td>
+<td style="text-align: left;">35,463</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,388</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">416,563</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-01</td>
 <td style="text-align: left;">34,728</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">735</td>
 <td style="text-align: left;">1,337</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">51</td>
 <td style="text-align: left;">403,260</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-30</td>
-<td style="text-align: left;">33,690</td>
-<td style="text-align: left;">1,038</td>
-<td style="text-align: left;">1,290</td>
-<td style="text-align: left;">47</td>
-<td style="text-align: left;">382,966</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-25</td>
 <td style="text-align: left;">30,839</td>
-<td style="text-align: left;">3,889</td>
+<td style="text-align: left;">4,624</td>
 <td style="text-align: left;">1,075</td>
-<td style="text-align: left;">262</td>
+<td style="text-align: left;">313</td>
 <td style="text-align: left;">333,682</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-18</td>
 <td style="text-align: left;">25,271</td>
-<td style="text-align: left;">9,457</td>
+<td style="text-align: left;">10,192</td>
 <td style="text-align: left;">754</td>
-<td style="text-align: left;">583</td>
+<td style="text-align: left;">634</td>
 <td style="text-align: left;">247,134</td>
 </tr>
 </tbody>
