--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-02</td>
 <td style="text-align: left;">35,463</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">416,563</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-05-01</td>
 <td style="text-align: left;">34,728</td>
 <td style="text-align: left;">735</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-25</td>
-<td style="text-align: left;">30,839</td>
-<td style="text-align: left;">4,624</td>
-<td style="text-align: left;">1,075</td>
-<td style="text-align: left;">313</td>
-<td style="text-align: left;">333,682</td>
+<td style="text-align: left;">2020-04-26</td>
+<td style="text-align: left;">31,528</td>
+<td style="text-align: left;">3,935</td>
+<td style="text-align: left;">1,094</td>
+<td style="text-align: left;">294</td>
+<td style="text-align: left;">345,182</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-18</td>
-<td style="text-align: left;">25,271</td>
-<td style="text-align: left;">10,192</td>
-<td style="text-align: left;">754</td>
-<td style="text-align: left;">634</td>
-<td style="text-align: left;">247,134</td>
+<td style="text-align: left;">2020-04-19</td>
+<td style="text-align: left;">26,000</td>
+<td style="text-align: left;">9,463</td>
+<td style="text-align: left;">781</td>
+<td style="text-align: left;">607</td>
+<td style="text-align: left;">256,698</td>
 </tr>
 </tbody>
 </table>
