--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-05-03</td>
+<td style="text-align: left;">36,078</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,403</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">428,744</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-02</td>
 <td style="text-align: left;">35,463</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">615</td>
 <td style="text-align: left;">1,388</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">15</td>
 <td style="text-align: left;">416,563</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-05-01</td>
-<td style="text-align: left;">34,728</td>
-<td style="text-align: left;">735</td>
-<td style="text-align: left;">1,337</td>
-<td style="text-align: left;">51</td>
-<td style="text-align: left;">403,260</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-26</td>
 <td style="text-align: left;">31,528</td>
-<td style="text-align: left;">3,935</td>
+<td style="text-align: left;">4,550</td>
 <td style="text-align: left;">1,094</td>
-<td style="text-align: left;">294</td>
+<td style="text-align: left;">309</td>
 <td style="text-align: left;">345,182</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-19</td>
 <td style="text-align: left;">26,000</td>
-<td style="text-align: left;">9,463</td>
+<td style="text-align: left;">10,078</td>
 <td style="text-align: left;">781</td>
-<td style="text-align: left;">607</td>
+<td style="text-align: left;">622</td>
 <td style="text-align: left;">256,698</td>
 </tr>
 </tbody>
