--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-03</td>
 <td style="text-align: left;">36,078</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">428,744</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-05-02</td>
 <td style="text-align: left;">35,463</td>
 <td style="text-align: left;">615</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-26</td>
-<td style="text-align: left;">31,528</td>
-<td style="text-align: left;">4,550</td>
-<td style="text-align: left;">1,094</td>
-<td style="text-align: left;">309</td>
-<td style="text-align: left;">345,182</td>
+<td style="text-align: left;">2020-04-27</td>
+<td style="text-align: left;">32,138</td>
+<td style="text-align: left;">3,940</td>
+<td style="text-align: left;">1,108</td>
+<td style="text-align: left;">295</td>
+<td style="text-align: left;">357,028</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-19</td>
-<td style="text-align: left;">26,000</td>
-<td style="text-align: left;">10,078</td>
-<td style="text-align: left;">781</td>
-<td style="text-align: left;">622</td>
-<td style="text-align: left;">256,698</td>
+<td style="text-align: left;">2020-04-20</td>
+<td style="text-align: left;">26,664</td>
+<td style="text-align: left;">9,414</td>
+<td style="text-align: left;">806</td>
+<td style="text-align: left;">597</td>
+<td style="text-align: left;">266,853</td>
 </tr>
 </tbody>
 </table>
