--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-05-04</td>
+<td style="text-align: left;">36,897</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,423</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">444,814</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-03</td>
 <td style="text-align: left;">36,078</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">819</td>
 <td style="text-align: left;">1,403</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">20</td>
 <td style="text-align: left;">428,744</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-05-02</td>
-<td style="text-align: left;">35,463</td>
-<td style="text-align: left;">615</td>
-<td style="text-align: left;">1,388</td>
-<td style="text-align: left;">15</td>
-<td style="text-align: left;">416,563</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-27</td>
 <td style="text-align: left;">32,138</td>
-<td style="text-align: left;">3,940</td>
+<td style="text-align: left;">4,759</td>
 <td style="text-align: left;">1,108</td>
-<td style="text-align: left;">295</td>
+<td style="text-align: left;">315</td>
 <td style="text-align: left;">357,028</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-20</td>
 <td style="text-align: left;">26,664</td>
-<td style="text-align: left;">9,414</td>
+<td style="text-align: left;">10,233</td>
 <td style="text-align: left;">806</td>
-<td style="text-align: left;">597</td>
+<td style="text-align: left;">617</td>
 <td style="text-align: left;">266,853</td>
 </tr>
 </tbody>
