--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-04</td>
 <td style="text-align: left;">36,897</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">444,814</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-05-03</td>
 <td style="text-align: left;">36,078</td>
 <td style="text-align: left;">819</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-27</td>
-<td style="text-align: left;">32,138</td>
-<td style="text-align: left;">4,759</td>
-<td style="text-align: left;">1,108</td>
-<td style="text-align: left;">315</td>
-<td style="text-align: left;">357,028</td>
+<td style="text-align: left;">2020-04-28</td>
+<td style="text-align: left;">32,846</td>
+<td style="text-align: left;">4,051</td>
+<td style="text-align: left;">1,191</td>
+<td style="text-align: left;">232</td>
+<td style="text-align: left;">367,435</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-20</td>
-<td style="text-align: left;">26,664</td>
-<td style="text-align: left;">10,233</td>
-<td style="text-align: left;">806</td>
-<td style="text-align: left;">617</td>
-<td style="text-align: left;">266,853</td>
+<td style="text-align: left;">2020-04-21</td>
+<td style="text-align: left;">27,495</td>
+<td style="text-align: left;">9,402</td>
+<td style="text-align: left;">856</td>
+<td style="text-align: left;">567</td>
+<td style="text-align: left;">277,685</td>
 </tr>
 </tbody>
 </table>
