--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-05</td>
 <td style="text-align: left;">37,439</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">466,288</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-05-04</td>
 <td style="text-align: left;">36,897</td>
 <td style="text-align: left;">542</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-28</td>
-<td style="text-align: left;">32,846</td>
-<td style="text-align: left;">4,593</td>
-<td style="text-align: left;">1,191</td>
-<td style="text-align: left;">345</td>
-<td style="text-align: left;">367,435</td>
+<td style="text-align: left;">2020-04-29</td>
+<td style="text-align: left;">33,192</td>
+<td style="text-align: left;">4,247</td>
+<td style="text-align: left;">1,240</td>
+<td style="text-align: left;">296</td>
+<td style="text-align: left;">374,048</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-21</td>
-<td style="text-align: left;">27,495</td>
-<td style="text-align: left;">9,944</td>
-<td style="text-align: left;">856</td>
-<td style="text-align: left;">680</td>
-<td style="text-align: left;">277,685</td>
+<td style="text-align: left;">2020-04-22</td>
+<td style="text-align: left;">27,869</td>
+<td style="text-align: left;">9,570</td>
+<td style="text-align: left;">884</td>
+<td style="text-align: left;">652</td>
+<td style="text-align: left;">282,942</td>
 </tr>
 </tbody>
 </table>
