--- a/NEWS.html
+++ b/NEWS.html
@@ -386,13 +386,19 @@ summary {
 </ul>
 </div>
 <div id="section-1" class="section level1">
+<h1>2020-05-06 – 2020-05-07</h1>
+<ul>
+<li>It appears that there were issues with updates to the dashboard and data on these days. I believe the 11am update on 2020-05-07 was late (updated sometime between 12pm and 7pm). I’ve corrected the daily counts in the data used in my charts by treating the 2020-05-07 19:00 snapshot as if it happened at 2020-05-07 12:59.</li>
+</ul>
+</div>
+<div id="section-2" class="section level1">
 <h1>2020-04-29</h1>
 <ul>
 <li><p>Added <strong>Health Metrics</strong> data set that was released on 2020-04-28. <a href="https://fdoh.maps.arcgis.com/home/item.html?id=492f02b473df4c8f8aa68fedf420c933" class="uri">https://fdoh.maps.arcgis.com/home/item.html?id=492f02b473df4c8f8aa68fedf420c933</a></p></li>
 <li><p>Fixed directory names in <code>pdfs/</code> so that they do not include <code>&quot;:&quot;</code> (#18).</p></li>
 </ul>
 </div>
-<div id="section-2" class="section level1">
+<div id="section-3" class="section level1">
 <h1>2020-04-25</h1>
 <ul>
 <li>Starting Saturday April 25, the COVID-19 case and testing counts are only updated once daily, at around 11am. I’ve modified my summary plots and scripts to use the last snapshot of reported counts prior to 1pm, so that daily changes prior to the 2020-04-25 change are comparable to changes obsevered after.</li>
@@ -405,27 +411,27 @@ summary {
 <li><p>As of 2020-04-23 in the morning, the line list is currently not available. This is causing the dashboard to show “0 Total Cases”. I adjusted the snapshot scripts so that updates will be stored only when the table is available.</p></li>
 </ul>
 </div>
-<div id="section-3" class="section level1">
+<div id="section-4" class="section level1">
 <h1>2020-04-13</h1>
 <ul>
 <li><p>At some point in the last few days, the Cases variable in the Line List table served via ArcGIS changed from a numeric timestamp to a character <code>d/m/Y HH:MM</code> timestamp.</p></li>
 <li><p>Similarly Florida resident deaths were previously reported in the variable <code>fl_res_deaths</code>, which was renamed <code>c_fl_res_deaths</code> in the county-level summary table served via ArcGIS.</p></li>
 </ul>
 </div>
-<div id="section-4" class="section level1">
+<div id="section-5" class="section level1">
 <h1>2020-04-09</h1>
 <ul>
 <li><p>Additional tables that have been added to the dashboard are now also available via the arcgis API. I’ve added the Cases By Zip and Cases by Day tables to the data sets. The raw <code>geojson</code> for cases by zip are also included in <code>data/geojson</code>.</p></li>
 <li><p>I fixed an issue with the line list query to better utilize the arcgis API. I mised one or possibly two updates to this table in since 2020-04-08.</p></li>
 </ul>
 </div>
-<div id="section-5" class="section level1">
+<div id="section-6" class="section level1">
 <h1>2020-03-26</h1>
 <ul>
 <li>The total number of positive cases (regardless of Florida residency status) was remove from the dashboard in the evening. The dashboard now only shows the number of positive cases among Florida residents.</li>
 </ul>
 </div>
-<div id="section-6" class="section level1">
+<div id="section-7" class="section level1">
 <h1>2020-03-25</h1>
 <ul>
 <li><p>The division of ages in the case count by age range summary on Page 2 of the PDF report has changed from 0-9, 10-19, etc. to 0-4, 5-14, 15-24, etc. in the 2020-03-25-1007 report.</p></li>
@@ -436,14 +442,14 @@ summary {
 <p>and the heading of the page was changed from <em>All persons tested</em> to <em>All persons with tests reported</em>.</p></li>
 </ul>
 </div>
-<div id="section-7" class="section level1">
+<div id="section-8" class="section level1">
 <h1>2020-03-24</h1>
 <ul>
 <li><p>PDF processing is now part of the automatic update. Failures in the extraction process are recorded in the README.md file in the pdf-specific data folder in <code>pdfs/</code>.</p></li>
 <li><p>Added a few more strategies for parsing the Line List tables in the PDF repots that fixed a few issues in previous extractions and should make the process more robust.</p></li>
 </ul>
 </div>
-<div id="section-8" class="section level1">
+<div id="section-9" class="section level1">
 <h1>2020-03-23</h1>
 <ul>
 <li><p>Added historical PDF reports from 2020-03-16,17,18 that were found via Google</p></li>
@@ -451,7 +457,7 @@ summary {
 <li><p>Added plot showing age distribution by sex among positive cases</p></li>
 </ul>
 </div>
-<div id="section-9" class="section level1">
+<div id="section-10" class="section level1">
 <h1>2020-03-22</h1>
 <div id="major-changes" class="section level2">
 <h2>Major Changes</h2>
@@ -477,7 +483,7 @@ summary {
 </ul>
 </div>
 </div>
-<div id="section-10" class="section level1">
+<div id="section-11" class="section level1">
 <h1>2020-03-21</h1>
 <ul>
 <li><p>A <em>community spread</em> table was added to the 2020-03-21 10:08:00 EDT report and includes cases where travel or contact with a confirmed case cannot be established as the source of infection.</p></li>
